add  https://andricksantos.github.io/password-generator in the canonical

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Password generator made with html, css3 and javascript."/>
 	<meta name="robots" content="index,follow" />
 	<meta name="author" content="Andrick Santos">
-	<link rel="canonical" href="https://andricksantos.github.io/" />
+	<link rel="canonical" href=" https://andricksantos.github.io/password-generator" />
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 	<link rel="stylesheet" href="css/estilos.css">
