add url about the repository.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 			</div>
 		</form>
 		<div class="creditos">
+			<p>Repository: <a href="https://github.com/andricksantos/password-generator" target="_blank" title="Go to repository">Password-Generator</a></p>
 			<p>created by <a href="https://andricksantos.github.io/" title="UX UI designer | Full Stack Developer | Graphic Designer . 💻😍✨" target="_blank">Andrick Santos</a> </p>
 		</div>
 	</div>
