--- a/index.html
+++ b/index.html
@@ -3,15 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Password Generator</title>
+	<title>Online Password Generator</title>
 	<meta name="description" content="Password generator made with html, css3 and javascript."/>
 	<meta name="robots" content="index,follow" />
 	<meta name="author" content="Andrick Santos">
 	<link rel="canonical" href=" https://andricksantos.github.io/password-generator" />
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="fontawesome/css/all.min.css">
+
+	<meta property="og:locale" content="es_LA" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Password Generator" />
+	<meta property="og:description" content="Password generator made with html, css3 and javascript." />
+	<meta property="og:url" content="https://andricksantos.github.io/SEO/" />
+	<meta property="og:site_name" content="Password Generator" />
+	<meta property="og:image" content="img/pg.png" />
+	<meta property='fb:admins' content='FB-AppID'/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:description" content="Password generator made with html, css3 and javascript."/>
+	<meta name="twitter:title" content="Password Generator"/>
+	<meta name="twitter:site" content="@Organization"/>
+	<meta name="twitter:creator" content="@santosandrick1"/>
+
+	<!-- Favicon -->
+	<link rel="icon" href="img/pg.png" sizes="32x32" />
+	<link rel="icon" href="img/pg.png" sizes="192x192" />
+	<link rel="apple-touch-icon-precomposed" href="img/pg.png">
+	<meta name="msapplication-TileImage" content="img/pg.png">
 
 	<!-- Google Analytics -->
 	<script>
@@ -100,12 +120,19 @@
 				</div>
 			</div>
 		</form>
-		<div class="creditos">
-			<p>Repository: <a href="https://github.com/andricksantos/password-generator" target="_blank" title="Go to repository">Password-Generator</a></p>
-			<p>created by <a href="https://andricksantos.github.io/" title="UX UI designer | Full Stack Developer | Graphic Designer . 💻😍✨" target="_blank">Andrick Santos</a> </p>
+		<div class=" creditos">
+			<p class="textos">Github Repository: <a href="https://github.com/andricksantos/password-generator" target="_blank" title="Go to repository">Password-Generator</a></p>
+			<p class="textos">Created by: <a href="https://andricksantos.github.io/" title="UX UI designer | Full Stack Developer | Graphic Designer . 💻😍✨" target="_blank">Andrick Santos</a> </p>
+			<p class="textos">Patrocinate by: <a href="https://www.youtube.com/channel/UCepbBv6NUBPnPAJyZqSiWWQ?sub_confirmation=1" target="_blank" title="TVshow | Entertainment Channel">TVshow</a></p>
+			<!-- boton de youtube -->
+			<script src="https://apis.google.com/js/platform.js"></script>
+			<div class="g-ytsubscribe" data-channelid="UCepbBv6NUBPnPAJyZqSiWWQ" data-layout="full" data-count="default"></div>
 		</div>
 	</div>
 
+	
+
+	<!-- seccion de los script -->
 	<script src="js/app.js"></script>
 </body>
 </html>
