--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Online Password Generator</title>
-	<meta name="description" content="Password generator made with html, css3 and javascript."/>
+	<meta name="description" content="Strong Password Generator to create secure passwords that are impossible to crack on your device without sending them across the Internet, and learn over 30 tricks to keep your passwords, accounts and documents safe."/>
+	<meta name="keywords" content="Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password" >
+
 	<meta name="robots" content="index,follow" />
 	<meta name="author" content="Andrick Santos">
 	<link rel="canonical" href=" https://andricksantos.github.io/password-generator" />
